# javamini

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  mini_jvm.cpp  mjc.cpp  program.mj  program.mjvm
